<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimpleDictionary</string>
    <string name="main_title">SimpleDictionary</string>
    <string name="main_subtitle">Add, edit, display, and delete words with meanings.</string>
    <string name="empty_dictionary">No words yet. Tap + to add your first word.</string>
    <string name="add_new_word">Add new word</string>
    <string name="add_word_title">Add Word</string>
    <string name="edit_word_title">Edit Word</string>
    <string name="word_label">Word</string>
    <string name="meaning_label">Meaning</string>
    <string name="word_hint">Enter the word</string>
    <string name="meaning_hint">Enter the meaning</string>
    <string name="save">SAVE</string>
    <string name="toast_word_added">A word is added</string>
    <string name="toast_word_updated">A word is updated</string>
    <string name="toast_word_deleted">A word is deleted</string>
    <string name="toast_missing_fields">Please enter a word and a meaning</string>
</resources>
